--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -10,34 +10,45 @@
         <LinearLayout
             android:id="@+id/info"
             android:layout_width="340dp"
-            android:layout_height="340dp"
+            android:layout_height="320dp"
                 android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="160dp"
-            android:text="Send Message"
-            android:layout_margin="20dp"
+            android:text="친구에게 공유하기"
+            android:fontFamily="@font/gmarketsansttfmedium"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center"
             android:textAlignment="center"
             android:textSize="25sp" />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/txt_phone"
+                <TextView
+                    android:id="@+id/resNameTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:hint="Phone Number"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_height="wrap_content"
+                    android:text="하바쿡"
+                    android:fontFamily="@font/gmarketsansttfmedium"
                     android:gravity="center"
-                    android:textAlignment="center">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:textAlignment="center"
+                    android:layout_marginBottom="15dp"
+                    android:textColor="#A91D37"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="이 식당을 친구에게 공유해보세요."
+                    android:fontFamily="@font/gmarketsansttfmedium"
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:textSize="15sp" />
+
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/txt_contents"
@@ -52,7 +63,7 @@
                     android:textAlignment="center">
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="100dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -61,12 +72,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+                    android:fontFamily="@font/gmarketsansttfmedium"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
+                    android:letterSpacing="0.1"
             android:gravity="center"
             android:textAlignment="center"
             android:onClick="shutDownClick"
-            android:text="Done"/>
+            android:text="보내기"/>
         </LinearLayout>
 
 </LinearLayout>
