--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -151,6 +151,7 @@
                             android:id="@+id/addressCard"
                             android:layout_marginStart="13dp"
                             android:layout_marginTop="6dp"
+                            android:layout_marginEnd="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="13sp"
