--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -17,4 +17,10 @@
         android:elevation="5dp"
         app:lottie_rawRes="@raw/loading"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/img0"/>
+
 </RelativeLayout>
