--- a/app/src/main/res/layout/restaurant_item_list.xml
+++ b/app/src/main/res/layout/restaurant_item_list.xml
@@ -67,18 +67,35 @@
                     android:layout_marginStart="15dp"
                     android:fontFamily="@font/gmarketsansttflght"
                     android:textColor="#A91D37"
-                    android:text="text"
-                    android:textSize="25sp"
+                    android:text="최진엽등촌샤브샤브"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
+
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="3"
+                    android:rating="3"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:isIndicator="true"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/get_menu"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="15dp"
                     android:textSize="15sp"
                     android:textColor="#A91D37"
                     android:textStyle="bold"
@@ -90,7 +107,7 @@
                     android:id="@+id/restaurant_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/gmarketsansttflght"
+                    android:fontFamily="@font/gmarketsansttfmedium"
                     android:textColor="@color/black"
                     android:textSize="12sp"
                     android:text="text"
