--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:gravity="center"
             android:minHeight="?attr/actionBarSize">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
@@ -34,18 +34,20 @@
                     android:src="@drawable/img0"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="15dp"
                     android:fontFamily="@font/gmarketsansttflght"
                     android:letterSpacing="0.1"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="카슐랭 가이드"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+            </FrameLayout>
 
         </androidx.appcompat.widget.Toolbar>
 
